@@ -65,8 +65,10 @@ implementation("org.apache.fory:fory-kotlin:1.5.0")
 
 ### JDK25+
 
-Kotlin uses the Fory Java core when running. On JDK25+, open `java.lang.invoke`
-to Fory. Use `ALL-UNNAMED` when Fory is on the classpath:
+Kotlin uses the Fory Java core when running. On JDK25+, opening `java.lang.invoke` to Fory core is
+not required, but is recommended. It avoids the current-JDK Unsafe fallback and is required when Unsafe
+access is disabled or unavailable, including with `--sun-misc-unsafe-memory-access=deny`. Use
+`ALL-UNNAMED` when Fory is on the classpath:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
